; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/ibmvscsi/extr_iseries_vscsi.c_iseriesvscsi_init_crq_queue.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/ibmvscsi/extr_iseries_vscsi.c_iseriesvscsi_init_crq_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibmvscsi_host_data = type { i32 }
%struct.crq_queue = type { i32 }

@single_host_data = common dso_local global %struct.ibmvscsi_host_data* null, align 8
@viopath_hostLp = common dso_local global i32 0, align 4
@viomajorsubtype_scsi = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"viopath_open failed with rc %d in open_event_path\0A\00", align 1
@iseriesvscsi_handle_event = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [53 x i8] c"vio_setHandler failed with rc %d in open_event_path\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.crq_queue*, %struct.ibmvscsi_host_data*, i32)* @iseriesvscsi_init_crq_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iseriesvscsi_init_crq_queue(%struct.crq_queue* %0, %struct.ibmvscsi_host_data* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.crq_queue*, align 8
  %6 = alloca %struct.ibmvscsi_host_data*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.crq_queue* %0, %struct.crq_queue** %5, align 8
  store %struct.ibmvscsi_host_data* %1, %struct.ibmvscsi_host_data** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.ibmvscsi_host_data*, %struct.ibmvscsi_host_data** %6, align 8
  store %struct.ibmvscsi_host_data* %9, %struct.ibmvscsi_host_data** @single_host_data, align 8
  %10 = load i32, i32* @viopath_hostLp, align 4
  %11 = load i32, i32* @viomajorsubtype_scsi, align 4
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @viopath_open(i32 %10, i32 %11, i32 %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @printk(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %34

19:                                               ; preds = %3
  %20 = load i32, i32* @viomajorsubtype_scsi, align 4
  %21 = load i32, i32* @iseriesvscsi_handle_event, align 4
  %22 = call i32 @vio_setHandler(i32 %20, i32 %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %19
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @printk(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.1, i64 0, i64 0), i32 %26)
  br label %29

28:                                               ; preds = %19
  store i32 0, i32* %4, align 4
  br label %35

29:                                               ; preds = %25
  %30 = load i32, i32* @viopath_hostLp, align 4
  %31 = load i32, i32* @viomajorsubtype_scsi, align 4
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @viopath_close(i32 %30, i32 %31, i32 %32)
  br label %34

34:                                               ; preds = %29, %16
  store i32 -1, i32* %4, align 4
  br label %35

35:                                               ; preds = %34, %28
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @viopath_open(i32, i32, i32) #1

declare dso_local i32 @printk(i8*, i32) #1

declare dso_local i32 @vio_setHandler(i32, i32) #1

declare dso_local i32 @viopath_close(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
